# milapy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yaml  milapy.yaml  package.yaml
docs/: .prettierignore  .prettierrc.json  config.toml  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts  generateDynamicMeta.ts  head.ts
docs/.vitepress/theme/: style.css
docs/content/: _index.md
docs/content/docs/: chain.md
docs/content/docs/blocks/: get_block_number.md
docs/content/menu/: index.md
docs/layouts/partials/docs/: brand.html  html-head-title.html
docs/static/: style.css
milapy/: __init__.py  _chain.py  _client.py
tests/: test_chain.py  test_client.py
