[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "milapy"
version = "0.1.0"
description = ""
authors = ["pyk <gm@pyk.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "0.25.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.7"
mypy = "1.7.1"
tomli = { version = "2.0.1", python = "<3.11" }

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"

# ruff

[tool.ruff]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]
line-length = 80
indent-width = 4

[tool.ruff.isort]
combine-as-imports = true

# mypy

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
